update secrets.yml; fix HOME directory in userdata script

--- a/hello-world.template
+++ b/hello-world.template
@@ -124,7 +124,8 @@ Resources:
             #!/usr/bin/env bash
             set -ox pipefail
 
-            home=/root
+            HOME=/root
+
             appliance_url=${ApplicanceURL}
             s3_bucket=${HostfactoryBucket}
 
