--- a/webapp/secrets.yml
+++ b/webapp/secrets.yml
@@ -1,3 +1,2 @@
-AWS_ACCESS_KEY_ID:     !var aws/iam/us-east-1/users/conjur/access_key_id
-AWS_SECRET_ACCESS_KEY: !var aws/iam/us-east-1/users/conjur/secret_access_key
-AWS_DEFAULT_REGION: us-east-1
+DB_PASS: !var hello-world/postgres/user
+DB_USER: !var hello-world/postgres/password
